--- a/City - Slider Starter Files/index.html
+++ b/City - Slider Starter Files/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>City-Ride-MAgazine</title>
+    <title>City-Ride-Magazine</title>
     <link rel="stylesheet" href="bootstrap-4.1.3-dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="css/fixed.css" />
@@ -31,14 +31,12 @@
             <li class="nav-item">
               <a class="nav-link" href="#home">Home</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#course">Course</a>
-            </li>
+
             <li class="nav-item">
               <a class="nav-link" href="#portfolio">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#team">Team</a>
+              <a class="nav-link" href="#services">services</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
@@ -81,13 +79,13 @@
           <!-- ------- Slide 2 --------- -->
           <div
             class="carousel-item"
-            style="background-image: url(img/computers-2.png)"
+            style="background-image: url(img/demo1.JPG)"
           ></div>
           <!-- ------Slide 2 end ------------- -->
           <!-- ----------Slide 3 -------------- -->
           <div
             class="carousel-item"
-            style="background-image: url(img/computers-3.png)"
+            style="background-image: url(img/1.jpg)"
           ></div>
           <!-- --------------Slide 3 end---------- -->
         </div>
@@ -116,16 +114,10 @@
     <!--- Start Course Section -->
     <div id="course" class="offset">
       <div class="col-12 narrow text-center">
-        <h1>Nuno Theme Course</h1>
-        <p class="lead">
-          Learn Bootstrap by creating an advanced Bootstrap 4 Responsive Website
-          Template from scratch, with no steps skipped!
-        </p>
-        <a
-          class="btn btn-secondary btn-md"
-          href="https://w3newbie.com/courses"
-          target="_blank"
-          >Nuno Theme Course</a
+        <h1>City Ride Posts of the day</h1>
+        <p class="lead">Click the button below to visit the blog Sections</p>
+        <a class="btn btn-secondary btn-md" href="blog.html" target="_blank"
+          >Blog Section</a
         >
       </div>
     </div>
@@ -141,8 +133,8 @@
         <div class="row no-padding">
           <div class="col-sm-4">
             <div class="portfolio">
-              <a href="img/portfolio/1.jpg" target="_blank"></a>
-              <img src="img/portfolio/1.jpg" />
+              <a href="img/portfolio/demo1.JPG" target="_blank"></a>
+              <img src="img/portfolio/demo1.JPG" />
             </div>
           </div>
           <div class="col-sm-4">
@@ -178,7 +170,9 @@
           <div class="narrow text-center">
             <div class="col-12">
               <p class="lead">Want to see more of our works</p>
-              <a class="btn btn-secondary btn-md" href="" target="_blank">Ok</a>
+              <a class="btn btn-secondary btn-md" href="" target="_blank"
+                >Click me</a
+              >
             </div>
           </div>
         </div>
@@ -186,9 +180,74 @@
       <!-- -------ENd of Jumbotron ------------ -->
     </div>
     <!-- ----- End of the Portfolio Section -- -->
+
+    <!-- ----------------Services ---------------------- -->
+
+    <div id="services" class="offset">
+      <section class="services">
+        <h1>What we Offer</h1>
+        <p>
+          CITY RIDE MAGAZINE is a special packaged magazine that will not only
+          keep you entertained but also educate, inspire, captivate and keep you
+          updated especially the online platform.
+        </p>
+        <div class="row">
+          <div class="services-col">
+            <h3>Adventure</h3>
+            <p>
+              It is not your usual magazine-this is a companion because it is
+              there whenever you need it and never leave your side , It is a
+              travel guide because it tells you about places within the cities
+              which saves you from guess work about what it is and what is not.
+            </p>
+          </div>
+          <div class="services-col">
+            <h3>Entertainment</h3>
+            <p>
+              It is your Entertainer because it brings the gist closer to you…
+              so stop searching because we’ve got you covered.
+            </p>
+          </div>
+          <div class="services-col">
+            <h3>Facts</h3>
+            <p>
+              Bottom Line…there is something for everyone no matter what you
+              fancy.
+            </p>
+          </div>
+          <div class="services-col">
+            <h3>Video Coverage</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Architecto, sed. Commodi harum, beatae fugit quas est quod
+              incidunt tenetur itaque illo. Velit, commodi! Quod sed sunt modi
+              officiis, voluptatum eius!
+            </p>
+          </div>
+          <div class="services-col">
+            <h3>PhotoShoot</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Architecto, sed. Commodi harum, beatae fugit quas est quod
+              incidunt tenetur itaque illo. Velit, commodi! Quod sed sunt modi
+              officiis, voluptatum eius!
+            </p>
+          </div>
+          <div class="services-col">
+            <h3>Live Events</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Architecto, sed. Commodi harum, beatae fugit quas est quod
+              incidunt tenetur itaque illo. Velit, commodi! Quod sed sunt modi
+              officiis, voluptatum eius!
+            </p>
+          </div>
+        </div>
+      </section>
+    </div>
     <!-- ----- Start of the Team Section -->
 
-    <div id="team" class="offset">
+    <!-- <div id="team" class="offset">
       <div class="col-12 text-center">
         <h3 class="heading">Meet Us</h3>
         <div class="heading-underline"></div>
@@ -223,8 +282,8 @@
           </div>
         </div>
       </div>
-      <!-- End of Row -->
-    </div>
+      End of Row
+    </div> -->
     <!-- ----- End of the Team Section -- -->
     <section class="campus">
       <h1>Vision</h1>
@@ -244,7 +303,7 @@
           </div>
         </div>
         <div class="campus-col">
-          <img src="img/ai.jpg" />
+          <img src="img/demo3.JPG" />
           <div class="layer">
             <h3>A TRIP ROUND YOUR CITY</h3>
           </div>
@@ -257,26 +316,24 @@
       <footer>
         <div class="row justify-content-center">
           <div class="col-md-5 text-center">
-            <img src="img/nuno.png" />
+            <img src="img/city-logo.jpeg" />
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
-              repellat beatae a praesentium aut adipisci deleniti commodi et
-              quas, aspernatur eaque laborum repellendus quasi ducimus nisi
-              nobis voluptatem fuga inventore.
+              CITY RIDE MAGAZINE is a Publication of FLYKIZZ CONCEPT, A company
+              registered under corporate Affairs Commission of Nigeria.
             </p>
             <strong>Contact Info</strong>
-            <p>999999900 <br />ujuju@jhj.bo</p>
-            <a href="" target="_blank">
+            <p>08032874192 <br />contactus@cityridemagazine.com</p>
+            <a href="www.facebook.com/cityridemagazine" target="_blank">
               <i class="fab fa-facebook-square"></i
             ></a>
-            <a href="" target="_blank">
+            <a href="www.twitter.com/cityridemagazine" target="_blank">
               <i class="fab fa-twitter-square"></i
             ></a>
             <a href="" target="_blank"> <i class="fab fa-youtube"></i></a>
           </div>
         </div>
         <hr class="socket" />
-        &copy; City
+        &copy; City-Ride 2021
         <!-- ----- End of Row ---------- -->
       </footer>
     </div>
